# xorg-color-picker

./: CMakeLists.txt  README.md  main.cpp  x.cpp  x.h
